--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,6 @@ gunicorn==21.2.0
 h11==0.14.0
 httpcore==0.17.3
 httplib2==0.22.0
-httpx==0.24.1
 idna==3.4
 inflection==0.5.1
 jws==0.1.3
@@ -48,7 +47,7 @@ pycryptodome==3.4.3
 PyJWT==2.8.0
 pyparsing==3.1.1
 python-jwt==2.0.1
-python-telegram-bot==20.5
+python-telegram-bot==20.6
 pytz==2023.3.post1
 PyYAML==6.0.1
 requests==2.31.0
@@ -61,3 +60,4 @@ typing_extensions==4.7.1
 uritemplate==4.1.1
 urllib3==1.26.16
 whitenoise==6.5.0
+openai==1.3.5
