--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-anyio==4.0.0
+anyio==3.7.1
 asgiref==3.7.2
 CacheControl==0.13.1
 cachetools==5.3.1
@@ -29,7 +29,6 @@ grpcio==1.58.0
 grpcio-status==1.58.0
 gunicorn==21.2.0
 h11==0.14.0
-httpcore==0.17.3
 httplib2==0.22.0
 idna==3.4
 inflection==0.5.1
@@ -50,6 +49,7 @@ python-jwt==2.0.1
 python-telegram-bot==20.7
 pytz==2023.3.post1
 PyYAML==6.0.1
+replicate==0.22.0
 requests==2.31.0
 requests-toolbelt==0.7.0
 rsa==4.9
