--- a/api/.gcloudignore
+++ b/api/.gcloudignore
@@ -12,9 +12,24 @@ __pycache__/
 *.swo
 *~
 
+# SQLite database files (if you're using SQLite)
+*.sqlite3
+
 # Log and temporary files
 *.log
 *.tmp
+
+# Media files (if you have an uploads directory or similar)
+media/
+
+# Static files
+static/
+
+# dependencies
+/node_modules
+
+# production
+/build
 
 # misc
 .idea
@@ -26,4 +41,8 @@ __pycache__/
 
 # Virtual environment (commonly "venv" or ".venv")
 venv/
-env/
+.env/
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
