--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -1,10 +1,11 @@
 FROM python:3.9
 
-WORKDIR /
+WORKDIR /app
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD python main.py
+EXPOSE 8080
+CMD ["python", "main.py"]
