--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.9
+FROM python:3.9-slim
 
 WORKDIR /app
 
@@ -7,5 +7,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
+ENV ENVIRONMENT=production
 EXPOSE 8080
 CMD ["python", "main.py"]
