--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -12,6 +12,7 @@ pyasn1==0.5.0
 pyasn1-modules==0.3.0
 PyJWT==2.8.0
 grpcio==1.58.0
+gunicorn==21.2.0
 uvicorn==0.25.0
 fastapi==0.108.0
 google-api-core==2.11.1
