--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -15,7 +15,10 @@ grpcio==1.58.0
 gunicorn==21.2.0
 uvicorn==0.25.0
 fastapi==0.108.0
+google-auth==2.23.0
 google-api-core==2.11.1
 google-cloud-firestore==2.12.0
 google-cloud-storage==2.10.0
 googleapis-common-protos==1.60.0
+yookassa==3.0.0
+pytz==2023.3.post1
